- *: Static cleanup. Contributed by Eero Tamminen. (VRI)

2013-04-04
- cli/cmd.h cli/cmdasm.S cli/cmdedit.c cli/cmdexec.c cli/cmdint.c
  cli/cmdmain.c cli/cmdparse.c cli/cmdutil.c cli/Makefile: Added new
  (standalone) version of EmuCON. (RFB)

2013-04-07
- cli/cmdasm.S: Minor code cleanup. Thanks to Vincent Riviere. (RFB)
- cli/cmdexec.c: Formatting: change tabs to spaces, add GPL. (RFB)
- cli/cmdexec.c: Execute programs even if file extension is omitted. (RFB)

2013-04-13
- cli/cmdexec.c: Fix line endings. (RFB)
- cli/cmd.h cli/cmdedit.c: Add command completion. (RFB)

2013-04-14
- cli/cmdedit.c: Improve command completion. (RFB)

2013-04-18
- cli/cmd.h cli/cmdedit.c cli/cmdexec.c cli/cmdutil.c: Command
  completion for first word in line only includes executable
  programs. (RFB)

2013-04-22
- include/config.h include/kprint.h: Added KDEBUG(()) and KINFO(()). (VRI)
- bios/disk.c: Always display partition information with KINFO(()). (VRI)
- bios/bios.c: Added many KDEBUG(()) to track bios_init() progress. (VRI)

2013-04-24
- aes/*.c desk/*.c bios/delay.c bios/floppy.c: Make sure that each *.c file
  includes its own *.h to get proper prototype checking. Patch contributed
  by Eero Tamminen. (THH)
- Makefile: Keep "all" as first target. (VRI)
- desk/deskapp.c desk/deskapp.h desk/deskbind.h desk/deskmain.c
  desk/deskwin.c desk/deskwin.h: The number of columns of icons in desktop
  windows is now dynamically adjusted according to window width. (RFB)

2013-04-25
- bios/kprint.c include/config.h: Added COLDFIRE_DEBUG_PRINT. (VRI)
- cli/cmdedit.c: In line edit, ctl-C may now be used to cancel the
  current line. (RFB)

2013-04-30
- cli/cmdutil.c: Fix comparison of date_sep. Based on a contribution by
  Eero Tamminen. (RFB)
- bios/lineavars.h vdi/vdi_esc.c: Fix bug: vq_chcells() returned fixed
  values for rows/cols. (RFB)
  
2013-05-01
- doc/status.txt: Updated status of a couple of VDI functions. (RFB)
- bios/screen.c: Replaced DBG_SCREEN with KDEBUG(()). (RFB)