@@ -19,11 +19,11 @@
 #define DBG_LINEA 0
 
 /* Precomputed value of log2(8/v_planes).
- * To get the address of a pixel x in a scan line, use the fomula:
+ * To get the address of a pixel x in a scan line, use the formula:
  * (x&0xfff0)>>shift_offset[v_planes]
- * Only the indexes 1, 2 and 4 are meaningful.
+ * Only the indexes 1, 2, 4 and 8 are meaningful.
  */
-const BYTE shift_offset[5] = {0, 3, 2, 0, 1};
+const BYTE shift_offset[9] = {0, 3, 2, 0, 1, 0, 0, 0, 0};
 
 /*
  * linea_init - init linea variables
