@@ -22,7 +22,7 @@
 
 /* Screen related variables */
 
-extern const BYTE shift_offset[5];  /* pixel to address helper */
+extern const BYTE shift_offset[9];  /* pixel to address helper */
 
 extern UWORD v_planes;          /* count of color planes */
 extern UWORD v_lin_wr;          /* line wrap : bytes per line */
